--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -1,29 +1,16 @@
-name: ci techtrends
+name: ci
 
 on:
   push:
-    branches:
-      - 'master'
+    branches: master
 
 jobs:
-  docker:
+  login:
     runs-on: ubuntu-latest
     steps:
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-      
-      - name: Build the Docker image
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: user/app:latest
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
