--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/build-push-action@master
         with:
           push: true
-          tags: user/app:latest
+          tags: techtrend:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
