--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -17,7 +17,7 @@ jobs:
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@master
+        uses: docker/build-push-action@v1
         with:
           push: true
           tags: techtrends:latest
