--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -17,10 +17,12 @@ jobs:
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           push: true
+          tags: sage007/techtrends:latest
 
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+        
