--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -10,7 +10,7 @@ spec:
   ports:
   - port: {{ .Values.service.port }} 
     protocol: TCP
-    targetPort: {{ .Values.service.port }}
+    targetPort: {{ .Values.service.targetPort }}
   selector:
     app: techtrends
     tag: techtrends
