--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -1,31 +1,40 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: techtrends
-    tag: techtrends
+    tag: latest
   name: techtrends
   namespace: {{ .Values.namespace.name }} 
 spec:
-  replicas: {{ .Values.replicaCount }} 
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: techtrends
-      tag: techtrends
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      tag: latest
   template:
     metadata:
       labels:
         app: techtrends
-        tag: techtrends
+        tag: latest
     spec:
       containers:
       - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: techtrends
+        ports:
+        - containerPort: {{ .Values.ports.containerPort }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.livenessProbe.path }}
+            port: {{ .Values.ports.containerPort }}
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.readinessProbe.path }}
+            port: {{ .Values.readinessProbe.port }}
+          initialDelaySeconds: 5
+          periodSeconds: 10
