--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,25 +1,17 @@
-## Set the API endpoint used to create the Service resource.
 apiVersion: v1
-## Define the type of the resource.
 kind: Service
-## Set the parameters that make the object identifiable, such as its name, namespace, and labels.
 metadata:
   labels:
     app: techtrends
+    tag: latest
   name: techtrends
-  namespace: default
-## Define the desired configuration for the Service resource.
+  namespace: sandbox
 spec:
-  ## Define the ports that the service should serve on. 
-  ## For example, the service is exposed on port 8111, and
-  ## directs the traffic to the pods on port 6112, using TCP.
   ports:
-  - port: 8111
+  - port: 4111
     protocol: TCP
-    targetPort: 6112
-  ## Identify the pods managed by this Service using the following selectors.
-  ## In this case, all pods with the label `go-helloworld`.
+    targetPort: 7111
   selector:
     app: techtrends
-  ## Define the Service type, here set to ClusterIP.
+    tag: latest
   type: ClusterIP
