--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -33,13 +33,13 @@ spec:
             cpu: "500m"
         livenessProbe:
           httpGet:
-            path: /health
+            path: /healthz
             port: 7111
           initialDelaySeconds: 5
           periodSeconds: 5
         readinessProbe:
           httpGet:
-            path: /health
+            path: /healthz
             port: 7111
           initialDelaySeconds: 5
           periodSeconds: 10
